test/programs/error-overlapping-patterns-variables.defs
(def ($n 0) _)
(def (0 $m) _)